# piter

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  vite.config.ts
crates/addons/: Cargo.toml
crates/pi_server/: Cargo.toml
crates/pi_server/src/: client.rs  lib.rs  resolve.rs
crates/pi_server/src/broker/: handlers.rs  mod.rs  process.rs  types.rs  util.rs  ws.rs
docs/: progress.md
scripts/: pi-version.json
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/base/: cmd.rs  handle.rs  init.rs  lightweight.rs  mod.rs  state.rs  timer.rs  tray.rs
src-tauri/src/base/window/: config.rs  manager.rs  mod.rs  position.rs  schema.rs
src-tauri/src/pi/: broker.rs  client.rs  mod.rs  resolve.rs
src/components/: ChatPane.vue
src/composables/: usePiConnection.ts
src/router/: index.ts
src/styles/: design-system.css
src/views/: ChatView.vue  DesktopView.vue
web/: index.html  package.json  vite.config.ts
web/src/: App.vue
web/src/components/: ChatPane.vue  ModelSelector.vue  SessionSidebar.vue
web/src/composables/: usePiConnection.ts  useSessions.ts
